# Ansible-MPLS-Lab

./: .gitignore  Makefile  README.md  ansible.cfg  cli_config.yaml  configure_vrf.yaml  configure_vrf_new.yaml  get_ios_rt.yaml  inventory.yml  ios_config_set.yaml  ios_vrf_set.yaml  iosxe_vrf_setter.yaml  iosxr_vrf_setter.yaml  pyproject.toml  save_config_playbook.yaml  test_token.txt  testplaybook.yml  vrf_getter.yaml  vrf_getter_nxos.yaml  vrf_getter_restconf.yaml  vrf_playbook.yml  vrf_setter_restconf.yaml
C_test/: Makefile  hello  hello.c  main.c
genie-lab/: ansible.cfg  cli_parser.yaml  genie_parser.yaml  get_facts.yaml  inv.yaml  requirements.txt
genie-lab/group_vars/: routers.yml
group_vars/: iosxe_routers.yml  iosxr_routers.yml  nxos_routers.yml  routers.yml
host_vars/: R1.yml  R3.yml  R4.yml  R5.yml
old-ansible-network-engine/: pyproject.toml
outputs/: R4_netconf.xml  R5.json  R5_netconf.xml  R6.json
parsers/: vrf_parser.yaml
plugins/filter/: filter.py  filter2.py
roles/ansible-network.network-engine/meta/: .galaxy_install_info
templates/: ios_vpns.j2  ios_vpns_netconf.j2  iosxr_vpns.j2  iosxr_vpns_netconf.j2  vpn_config.j2  vpns.j2  vrfs_template.j2
test_files/routers_configs/: R2.txt  symlink_test
test_files/vrfs/: vrfs_R2.txt  vrfs_R3.txt
tests/: unittest.yaml
tests/tasks/: test_ios_vrf_rt.yaml  test_rt_diff.yaml
