[tool.poetry]
name = "ansible-mpls-lab"
version = "0.1.0"
description = ""
authors = ["yonosemanana <yonosemanana.ap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.3.1"
ansible-pylibssh = "^1.1.0"
Jinja2 = "^3.1.2"
ansible-base = "^2.10.17"
ansible = "^9.0.1"
ncclient = "^0.6.15"
jxmlease = "^1.0.3"
xmltodict = "^0.13.0"
yamllint = "^1.33.0"
ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
