[tool.poetry]
name = "old-ansible-network-engine"
version = "0.1.0"
description = "Virtual environment to use 'network-engine' module with old Ansible version"
authors = ["yonosemanana <yonosemanana.ap@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
ansible = "~2.9"
ansible-pylibssh = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
